--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -21,15 +21,15 @@ jobs:
         run: npm install
 
       - name: Build Docker image
-        run: docker build -t my-express-app .
+        run: docker build -t my-ecom-app-k23 .
 
       - name: Đăng nhập Docker Hub
         run: echo "${{ secrets.DOCKER_PASSWORD }}" | docker login -u "${{ secrets.DOCKER_USERNAME }}" --password-stdin
 
       - name: Tag & Push image
         run: |
-          IMAGE=${{ secrets.DOCKER_USERNAME }}/my-express-app:latest
-          docker tag my-express-app $IMAGE
+          IMAGE=${{ secrets.DOCKER_USERNAME }}/my-ecom-app-k23:latest
+          docker tag my-ecom-app-k23 $IMAGE
           docker push $IMAGE
 
       - name: SSH Deploy to VPS (using password)
@@ -41,7 +41,7 @@ jobs:
           port: ${{ secrets.VPS_PORT }}
           script: |
             docker login -u ${{ secrets.DOCKER_USERNAME }} -p ${{ secrets.DOCKER_PASSWORD }}
-            docker pull ${{ secrets.DOCKER_USERNAME }}/my-express-app:latest
-            docker stop my-express-app || true
-            docker rm my-express-app || true
-            docker run -d --name my-express-app -p 4031:4031 ${{ secrets.DOCKER_USERNAME }}/my-express-app:latest
+            docker pull ${{ secrets.DOCKER_USERNAME }}/my-ecom-app-k23:latest
+            docker stop my-ecom-app-k23 || true
+            docker rm my-ecom-app-k23 || true
+            docker run -d --name my-ecom-app-k23 -p 4031:4031 ${{ secrets.DOCKER_USERNAME }}/my-ecom-app-k23:latest
